# ogc-cite-action

./: LICENSE  README.md  action.yml  parse_test_results.py  pyproject.toml  register-test-user.sh  run-test.sh
src/ogc_cite_action/: config.py  exceptions.py  main.py  models.py  schemas.py  teamengine_runner.py
src/ogc_cite_action/parsers/: earl.py  simple.py
src/ogc_cite_action/serializers/: simple.py
src/ogc_cite_action/templates/: results-overview.md  test-suite-result.md
tests/: conftest.py  test_parsers_earl.py
tests/data/: raw-result-ogcapi-edr10-earl.xml  raw-result-ogcapi-features-1.0-earl.xml  raw-result-ogcapi-processes-1.0-earl.xml
