[tool.poetry]
name = "ogc-cite-action"
version = "0.1.0"
description = ""
authors = ["Ricardo Garcia Silva <ricardo.garcia.silva@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ogc_cite_action", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
httpx = "^0.27.0"

[tool.poetry.scripts]
ogc-cite-action = "ogc_cite_action.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
