[tool.poetry]
name = "ogc-cite-action"
version = "0.1.0"
description = ""
authors = ["Ricardo Garcia Silva <ricardo.garcia.silva@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ogc_cite_action", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
jinja2-humanize-extension = "^0.4.0"
pydantic = "^2.10.4"

[tool.poetry.scripts]
ogc-cite-action = "ogc_cite_action.main:app"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
